added new pages, routing is set, added NavLink routind

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,12 @@
   grid-template-columns: 1fr 10fr;
   /* grid-gap: 10px; */
 
+}
+
+.app-wrapper-content {
+
+    grid-area: c;
+    background-color:rgb(243, 194, 194);
+    padding: 10px;
 
 }
