--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,15 +1,17 @@
 .nav {
   grid-area: n;
   background-color: burlywood;
-  padding: 5px;
+  padding: 15px;
   border-top: 10px solid white;
   
 }
 
-.item {
+.item a {
   color: white;
+  text-decoration: none;
 }
 
-.active {
+.item a.activeLink {
   color: blue;
 }
+
